# text2sql-slm-finetuning-grpo

./: .amlignore  .env.param  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
azure/: build_image.ps1  create_env.ps1  last_rawdata_id.txt  prep_data.ps1  run_jobs.ps1
azure/bicep/: main.bicep
azure/environments/: Dockerfile  conda_env.yml  environment.yml
azure/ml_jobs/: data_prep_job.yaml  eval_job.yaml  grpo_train_job.yaml  pipeline.yaml  train_eval_pipeline.yaml
configs/: grpo_config.yaml  reward_weights.yaml  training_args.yaml
data/: test_dataset_baseline.csv
data/prep/: baseline_nltosql.py  download_spider_bird.py  schema_split.py  serialize_schemas.py
data/synthetic/: enterprise_schemas.json  synthetic_qa_pairs.json
demo/: streamlit_app.py
docker/: Dockerfile
docs/: inference_log.txt
notebooks/: 01_data_exploration.ipynb  01_txt2sql-GRPO-finetuning-nb.ipynb  02_baseline_azureopenai_gpt.ipynb  02_baseline_sft.ipynb
src/: data_preparation.py  evaluator.py  grpo_trainer.py  rewards.py  utils.py
tests/: test_data_preparation.py  test_evaluator.py  test_rewards.py  test_utils.py
